<resources>
    <string name="app_name">Orbid</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_map">Map</string>
    <string name="task_image">Task Image</string>
    <string name="search">Search</string>
    <string name="username">Username</string>
    <string name="signin_Button">Sign In</string>
    <string name="create_account">Create</string>
    <string name="first_name">First Name</string>
    <string name="add_button">Add</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="signup_button">Sign Up</string>
    <string name="create_account_title">Create Account</string>
    <string name="no_reviews">No Reviews</string>

    <string name="title_activity_add_edit_real">AddEditReal</string>
    <string name="title_activity_list_requested_tasks">listRequestedTasks</string>
    <string name="title_activity_fullscreen_image">FullscreenImageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="bid_description">Bid Description</string>
    <string name="bid_title">Bid Title</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="bid">Bid</string>
    <string name="bid_amount">Bid Amount</string>

    <string name="cancel_action">Exit</string>
    <string name="ok">ok</string>
    <string name="taskstatus">TaskStatus</string>
    <string name="add">Add</string>
    <string name="refresh">Refresh</string>
    <string name="location">Location</string>
    <string name="reviews">Reviews</string>

</resources>
