<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cmput301w18t09.orbid.LoginActivity"
    android:background="@color/colorTheme">


    <TextView
        android:id="@+id/login_tvAppName"
        android:layout_width="300dp"
        android:layout_height="70dp"

        android:layout_below="@+id/loadingPanelLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:fontFamily="monospace"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#fcfcf9"
        android:textSize="50sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/login_etUsername"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/login_tvAppName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:background="@drawable/new_button_background"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/login_btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_etPassword"
        android:layout_alignStart="@+id/login_etPassword"
        android:layout_below="@+id/login_etPassword"
        android:layout_marginTop="21dp"
        android:background="@drawable/new_button_background"
        android:text="@string/signin_Button"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/login_btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login_btnSignIn"
        android:layout_alignBottom="@+id/login_btnSignIn"
        android:layout_alignEnd="@+id/login_etPassword"
        android:layout_alignRight="@+id/login_etPassword"
        android:background="@drawable/new_button_background"
        android:text="@string/signup_button"
        android:textAllCaps="false" />


    <RelativeLayout
        android:id="@+id/loadingPanelLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>

    <EditText
        android:id="@+id/login_etPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/login_etUsername"
        android:layout_alignStart="@+id/login_etUsername"
        android:layout_below="@+id/login_etUsername"
        android:layout_marginTop="13dp"
        android:background="@drawable/new_button_background"
        android:ems="10"
        android:gravity="center"
        android:hint="Password"
        android:inputType="textPassword"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textColor="@android:color/black" />
</RelativeLayout>
