<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="cmput301w18t09.orbid.UserProfileDialog"
    android:background="@drawable/linear_layout_back"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="#fcfcf9"
        android:gravity="center"
        android:text="Bidder's username"
        android:textAllCaps="false"
        android:textColor="#fcfcf9"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_below="@id/tv_username"
        android:background="@drawable/new_button_background"
        android:textAllCaps="false"
        android:text="@string/accept"
        android:textColor="@color/colorTheme"
        android:layout_marginLeft="4dp"
        android:layout_alignParentLeft="true"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnDecline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btnAccept"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_below="@id/tv_username"
        android:background="@drawable/new_button_background"
        android:textAllCaps="false"
        android:text="@string/decline"
        android:textColor="@color/colorTheme"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnDecline"
        android:layout_alignBottom="@+id/btnDecline"
        android:layout_marginLeft="280dp"
        android:layout_weight="1"
        android:background="@drawable/new_button_background"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorTheme" />
</RelativeLayout>